# laboratory_conditions

./: .gitignore  README.md  pyproject.toml  run.py
configs/: default.yaml
pore_pressure_during_injection_QinCenter/: compare_A_B_Pres.py  find_pore_pressure_during_injection_QinCenter.py  find_pore_pressure_during_injection_QinCenter_attempt_2_Sav.py  find_pore_pressure_during_injection_QinCenter_attempt_2_Sav_for_comp.py  input_parameters.py  input_parameters_2.py
pore_pressure_during_injection_QinCenter/QinCenter/: bound_coord_sort.py  find_func_matrix_remake.py  find_initial_func_matrix.py  find_pore_pressure_PinCenter_new_Savenkov.py  find_pore_pressure_QinCenter.py  find_pore_pressure_QinCenter_new_Savenkov.py  find_pore_pressure_QinCenter_new_Savenkov_correct.py  newFuncMatrix_fix_5.py
pore_pressure_during_injection_QinCenter/QinCenter_attempt_2_Sav/: find_area.py  find_distance.py  find_pore_pressure_QinCenter_new_Savenkov_correct.py  find_velocity.py  find_viscosity.py  start_to_do_replacement.py
pore_pressure_during_injection_QinCenter/experiment_data/: comparison_exp_simulat_QinCenter_QinPackers.py
pore_pressure_during_injection_QinCenter/result_folder/: plot_results.py
pore_pressure_during_injection_QinCenter/result_folder_2/: 120_step  1_step  60_step  derivative_calc.py  description  find_pore_pressure_during_injection_QinCenter.py  plot_results.py
pore_pressure_during_injection_QinPackers/: find_pore_pressure_during_injection_QinPackers.py  find_pore_pressure_during_injection_QinPackers_new.py
tests/: test_config.py
(+62 files in other folders)
